--- a/index.html
+++ b/index.html
@@ -178,8 +178,8 @@
   
       <!-- Teacher 2 -->
       <div class="teacher-card">
-        <img src="women.jpg" alt="Fatiha G.">
-        <h3>Fatiha G.</h3>
+        <img src="women.jpg" alt="Farah G.">
+        <h3>Farah G.</h3>
         <p><strong>Language:</strong> Arabic</p>
         <span class="level-badge">Beginners</span>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.
@@ -202,8 +202,8 @@
   
       <!-- Teacher 4: Spanish Beginner -->
       <div class="teacher-card">
-        <img src="mmen.jpg" alt="Dahman A.">
-        <h3>Dahman A.</h3>
+        <img src="mmen.jpg" alt="Ahmed A.">
+        <h3>Ahmed A.</h3>
         <p><strong>Language:</strong> Spanish</p>
         <span class="level-badge">Beginners</span>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.
