--- a/thankyou.html
+++ b/thankyou.html
@@ -12,7 +12,7 @@
         Welcome to <strong>VERBA Academy</strong> — your journey to language mastery starts now!<br><br>
         We're so excited to have you with us. Check your inbox for next steps, and let’s grow together, one word at a time! 🌍✨
     </p>
-    <a href="verba.html" class="back-btn">Back to Home</a>
+    <a href="index.html" class="back-btn">Back to Home</a>
   </div>
 </body>
 </html>
